syntax = "proto3";

package ai.metathings.service.identity;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "application_credential.proto";

message CreateApplicationCredentialRequest {
	message _Role {
		google.protobuf.StringValue id = 1;
		google.protobuf.StringValue name = 2;
	}
	google.protobuf.StringValue user_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue name = 2 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue secret = 4;
	google.protobuf.BoolValue unrestricted = 5;
	repeated _Role roles = 6;
	google.protobuf.Timestamp expires_at = 7;
}

message CreateApplicationCredentialResponse {
	ApplicationCredential application_credential = 1;
}
